# shop_fatsapi

./: README.md  db.sqilte3  items_views.py  kv.py  main.py  pyproject.toml
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helpers.py  product.py
users/: crud.py  schemas.py  views.py
